# computer_graphics

./: .gitignore
backend/: Dockerfile  app.py  pyproject.toml
backend/fractals/: __init__.py  julia.py  mandelbrot.py  utils.py
backend/models/: __init__.py
backend/models/colors/: __init__.py  color_model.py
backend/models/fractals/: utils.py  vicsek.py
backend/models/transformations/: __init__.py  affine_matrix.py  plotting.py  transform.py  translation.py
backend/routes/: __init__.py  general.py
backend/routes/colors/: __init__.py  color_model.py
backend/routes/fractals/: __init__.py  general.py  julia.py  mandelbrot.py  vicsek.py
backend/routes/transformations/: __init__.py  affine_transform.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/: _base.scss  main.scss
frontend/src/components/atoms/buttons/: ActionButton.vue  OutlineButton.vue  RegularButton.vue  SwitchButton.vue  TextButton.vue  TextLinkButton.vue
frontend/src/components/atoms/inputs/: PlainInput.vue  (+2 more)
frontend/src/components/general/: Fractals.vue  ProgramMenu.vue  TerminalText.vue
frontend/src/components/icons/: BookIcon.vue  CloseIcon.vue  InfoIcon.vue  PlayIcon.vue  SaveIcon.vue
frontend/src/includes/: components.js  toast.js  validation.js
frontend/src/layouts/: EmptyLayout.vue  TerminalLayout.vue  WindowLayout.vue
frontend/src/router/: index.js
frontend/src/stores/: aphine.js  colors.js  fractals.js
frontend/src/views/: AphineView.vue  ColorsView.vue  FractalView.vue  HomeView.vue
(+5 files in other folders)
