[tool.poetry]
name = "computer-graphics"
version = "0.1.0"
description = ""
authors = ["Roman Skok <rma.skok@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11,<3.13"
Flask = "^3.0.0"
numpy = "^1.26.1"
matplotlib = "^3.8.0"
numba = "^0.58.1"
Flask-Cors = "^4.0.0"
ImageMagic = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
